# Scrolling-Shooter

./: .gitignore  AssetManager.cpp  AssetManager.h  Background.cpp  Background.h  CMakeLists.txt  Collision.cpp  Collision.h  EnemyFactory.cpp  EnemyFactory.h  README.md  SDLManager.cpp  SDLManager.h  Texture.cpp  Texture.h  Vector2D.cpp  Vector2D.h  main.cpp
ComponentBasedES/: AllComponents.h  ColliderComponent.h  ComponentSystem.cpp  ComponentSystem.h  EnemyMovementComponent.h  HealthComponent.cpp  HealthComponent.h  InputManagerComponent.h  InvicibilityComponent.h  ScoreTrackerComponent.h  ShooterComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  UIComponent.h
